# go1_wx250s_mujoco_control_QP

./: Arm_Param.h  CMakeLists.txt  CartesianControl_01.cpp  CartesianControl_01.h  ContactJacobian_Arm.h  MPC_QP.cpp  README.md  THIRD_PARTY_NOTICES  contact_jacobian.h  inertial_params.cpp  main.cpp  utils.h  utils_jac.cpp
my_project/template/: Arm_Param.cpp  CMakeLists.txt  Cartesian_PD_End.h  ContactJacobian_Arm.cpp  MPC_QP.cpp  MPC_QP.h  Traj_Command_01M.cpp  Traj_Command_01M.h  contact_jacobian.cpp  go1_fk.cpp  inertial_params.h  main.cpp  makefile  plotData.py  robot_position.csv  test.cpp  transform_inertial_to_geom.h  utils.cpp  utils_jac.h
my_project/template/go1_wx250s/: go1_wx250s.xml  scene.xml
my_project/template/include/: CartesianControl_01.h  ContactJacobian_Arm.h  IK_PD_End.h  MPC_QP.h  Traj_Command_01M.h  Traj_Command_Goal.h  contact_jacobian.h  getVeloctyArm_feet.h  globals.h  go1_fk.h  inertial_params.h  utils.h  utils_jac.h
my_project/template/src/: CartesianControl_01.cpp  Cartesian_PD_End.cpp  ContactJacobian_Arm.cpp  IK_PD_End.cpp  MPC_QP.cpp  Traj_Command_01M.cpp  Traj_Command_Goal.cpp  contact_jacobian.cpp  getVeloctyArm_feet.cpp  globals.cpp  go1_fk.cpp  inertial_params.cpp  transform_inertial_to_geom.cpp  utils.cpp  utils_jac.cpp
